<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DemoCode</string>
    <string name="action_settings">Settings</string>
    <string name="activity_template_text">A \'simple\' activity where the activity handles the UI. No fragments involved. The template also shows a number of the Activity class methods that could be called.</string>
    <string name="edittext_field_in_fragment">EditText field in fragment</string>
    <string name="fragment_template_text">This is being displayed by FragmentTemplate. Look in logs to see order of calls.</string>
    <string name="hello">hello</string>
    <string name="ok">OK</string>
    <string name="sqlite_open_error">An error occurred in opening the SQLite database</string>
    <string name="title_activity_activity_with_fragment_template">ActivityWithFragmentTemplate</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="search_results">Search Results</string>

    <string name="settings">Settings</string>
    <string name="status">Status: -</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="list_paired_devices">List paired Devices</string>
    <string name="search_new_devices">Search new Devices / Cancel</string>

    <!-- Bluetooth strings-->
    <string name="turn_on_bluetooth_discovery">Turn on discovery</string>
    <string name="turn_off_bluetooth_discovery">Turn off discovery</string>
    <string name="start_ble_scan">Start Ble Scan</string>
    <string name="ble_scanner">Ble Scanner</string>
    <string name="ble_not_supported">Ble Not Supported on this device!</string>
    <string name="bluetooth_not_supported">Bluetooth not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="ble_client">Ble Client:</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- BT Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_device_control">DeviceControlActivity</string>


    <string name="callback_not_available">Callback interface not available for this request.</string>

    <!-- For heart rate demo -->
    <string name="heart_rate">Heart Rate:</string>
    <string name="connected_client">Ble Client:</string>
    <string name="not_connected">Not connected</string>
    <string name="must_be_at_api_21">Must be at API(21)/Lollipop or newer to use this demo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>

    <!-- Strings for setting transition animations -->
    <string name="device_default">Device default</string>
    <string name="no_scale_fade_in">No scale fade in</string>
    <string name="no_scale_fade_out">No scale fade out</string>
    <string name="slide_down_to_bottom">Slide down to bottom</string>
    <string name="slide_in_from_left">Slide in from left</string>
    <string name="slide_in_from_right">Slide in from right</string>
    <string name="slide_out_to_left">Slide out to left</string>
    <string name="slide_out_to_right">Slide  out to right</string>
    <string name="slide_up_from_bottom">Slide up from bottom</string>
    <string name="exit_animation">Exit Animation</string>
    <string name="enter_animation">Enter Animation</string>
    <string name="title_appcompatitem_list">AppCompatItems</string>
    <string name="title_appcompatitem_detail">AppCompatItem Detail</string>
    <string name="forward_transition">Forward Transition</string>
    <string name="backward_transition">Backward Transition</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="github_democode">https://github.com/efoertsch/DemoCode</string>


</resources>