<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bluetooth.BleHeartRatePeripheralFragment">

    <RelativeLayout
        android:id="@+id/rlHeartRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/lblHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/heart_rate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/lblHeartRate"
            android:ems="5"
            android:digits="0123456789"
            android:maxLength="3"
            android:inputType="number"
            android:text="72"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlHeartRate"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/lblBleClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/connected_client"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvConnectedClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/not_connected"
            android:layout_toRightOf="@+id/lblBleClient"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</RelativeLayout>
